--- a/_posts/0000-01-02-jbkcode.md
+++ b/_posts/0000-01-02-jbkcode.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our awesome slide!"
 ---
-This is a new slide
+This is a new slide. More changes...
 Use the left arrow to go back!
